--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1085,6 +1085,103 @@ a {
   background-color: #ffffff;
   color: #000000;
 }
+.cid-sB2zX0r3Vy {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-image: url("../../../assets/images/background1.jpg");
+}
+.cid-sB2zX0r3Vy .team-card {
+  margin-bottom: 2rem;
+  transition: all 0.3s;
+}
+.cid-sB2zX0r3Vy .team-card:hover {
+  transform: translateY(-10px);
+}
+.cid-sB2zX0r3Vy .card-wrap {
+  background: #ffe161;
+  border-radius: 4px;
+}
+@media (max-width: 991px) {
+  .cid-sB2zX0r3Vy .card-wrap {
+    margin-bottom: 2rem;
+  }
+}
+.cid-sB2zX0r3Vy .card-wrap .image-wrap img {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .cid-sB2zX0r3Vy .card-wrap .content-wrap {
+    padding: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-sB2zX0r3Vy .card-wrap .content-wrap {
+    padding: 1rem;
+  }
+}
+.cid-sB2zX0r3Vy .social-row {
+  text-align: center;
+}
+.cid-sB2zX0r3Vy .social-row .soc-item {
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin-right: 0.6rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  border: 2px solid #6592e6;
+  transition: all 0.3s;
+}
+.cid-sB2zX0r3Vy .social-row .soc-item .mbr-iconfont {
+  transition: all 0.3s;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  color: #6592e6;
+  font-size: 1.5rem;
+}
+.cid-sB2zX0r3Vy .social-row .soc-item:hover {
+  background-color: #6592e6;
+}
+.cid-sB2zX0r3Vy .social-row .soc-item:hover .mbr-iconfont {
+  color: #ffffff;
+}
+.cid-sB2zX0r3Vy .mbr-section-title {
+  color: #ffffff;
+}
+.cid-sB2zX0r3Vy .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-sB2mxDQzhD {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background: #ffffff;
+}
+.cid-sB2mxDQzhD .google-map {
+  height: 30rem;
+  position: relative;
+}
+.cid-sB2mxDQzhD .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-sB2mxDQzhD .google-map [data-state-details] {
+  color: #6b6763;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-sB2mxDQzhD .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-sB2mxDQzhD .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
 .cid-sAoVpqpHRB {
   padding-top: 30px;
   padding-bottom: 30px;
